fix touch events on ios devices

--- a/packages/venia-concept/src/components/DeliveryMethods/components/StoresList/storeList.css
+++ b/packages/venia-concept/src/components/DeliveryMethods/components/StoresList/storeList.css
@@ -5,4 +5,5 @@
     margin: 0;
     list-style: none;
     border: 1px solid rgb(var(--rk--color__gray-2));
+    -webkit-overflow-scrolling: touch;
 }
